# ai-agent

./: .gitignore  README.md  diagram.ipynb  pyproject.toml
app/: main.py
app/utilities/: settings.py
