[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.7.0",
    "langchain-community>=0.3.12",
    "langchain-openai>=0.2.12",
    "langgraph-checkpoint-mongodb>=0.1.0",
    "langgraph>=0.2.59",
    "langsmith>=0.2.3",
    "motor>=3.6.0",
    "pydantic-settings>=2.7.0",
    "tavily-python>=0.5.0",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "ipython>=8.30.0",
    "mypy>=1.13.0",
    "ruff>=0.8.3",
]

[tool.black]
line-length = 88

[tool.ruff]
lint.select = ["E", "F", "I"]
lint.fixable = ["ALL"]
exclude = [".git", ".mypy_cache", ".ruff_cache"]
line-length = 88

[tool.mypy]
plugins = ["pydantic.mypy"]

disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
disallow_untyped_decorators = false
ignore_missing_imports = true
implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
